tests/not-non-inputs.stderr
error: expected a fn with inputs
 --> $DIR/not-non-inputs.rs:3:1
  |
3 | #[auto_vec]
  | ^^^^^^^^^^^
