tests/not-non-inputs.rs
use auto_vec::auto_vec;

#[auto_vec]
fn foo() -> i32 {
    1
}

fn main() {}
